# agent-hum-crawler

./: .env.example  .gitignore  README.md  progress.md  pyproject.toml
.github/: copilot-instructions.md
config/: country_sources.example.json  country_sources.json  dashboard_workbench_profiles.json  feature_flags.example.json  moltis.hardened.example.toml  nlp_keywords.toml  report_template.brief.json  report_template.detailed.json  report_template.json  report_template.situation_analysis.json
rust_core/: Cargo.toml  build.rs
rust_core/.cargo/: config.toml
rust_core/src/: figure_extraction.rs  fuzzy_dedupe.rs  lib.rs  text_classify.rs  url_canonical.rs
scripts/: dashboard_api.py  e2e_gate.py  local-validate.ps1  local-validate.sh  moltis_security_check.py
specs/: 01-product-spec.md  02-technical-spec.md  03-mvp-backlog.md  04-test-plan.md  05-roadmap.md  06-architecture.md  07-source-connectors.md  08-country-source-onboarding.md  09-stocktake.md  10-pilot-signoff.md  11-moltis-ops-alignment.md  12-moltis-advanced-operations.md  13-moltis-security-auth.md  14-moltis-streaming-tool-registry.md  15-llm-intelligence-layer-v1.md  16-phase-c-skill-branch-sop.md  README.md  frontend-roadmap.md
tests/: test_agents.py  test_alerts.py  test_attachment_extract.py  test_config_validation.py  test_conformance.py  test_coordinator.py  test_database.py  test_dedupe.py  test_extraction_telemetry.py  test_feature_flags.py  test_feed_hardening.py  test_graph_ontology.py  test_hardening.py  test_hook_policies.py  test_llm_enrichment.py  test_llm_provider.py  test_phase4.py  (+14 more)
(+173 files in other folders)
