[package]
name = "moltis_rust_core"
version = "0.1.0"
edition = "2021"
description = "Performance-critical Rust extensions for the Moltis humanitarian crawler"

[lib]
name = "moltis_rust_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
regex = "1"
once_cell = "1"
url = "2"
